# dark_energy_evidence_github

./: CITATION.cff  README.md  pyproject.toml  testing_day1_code.py  testing_day2_code.py
dark_energy_evidence_package/: data_loader.py  graphs.py  with_dark_energy.py  without_dark_energy.py
dark_energy_evidence_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
downloaded_data_files/: our_new_custom_DES_SN5yr_dataset.csv
downloaded_dataset_files/: custom_choose_req_DES_data.py
tests/End_To_End_tests/: test_end_to_end.py
tests/Unit_tests/: test_without_dark_energy.py
